2009-01-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #10186: Time shifting (again) in datetime fields (followup to Bug#8746; thanks to Ernesto Baschny)

2009-01-20  Ingo Renner  <ingo@typo3.org>

	* Added missing license statement for using the "Silk" icon set of Mark James according to Creative Commons Attribution 2.5
	* Fixed bug #10134: XSS vulnerability in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10133: Command execution in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)

2009-01-19  Steffen Kamper  <info@sk-typo3.de>

    *  Fixed bug #10183: [felogin] redirect doesn't work with return_url

2009-01-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10181: htmlArea RTE: Move status bar to plugin
	* Added feature #10195: htmlArea RTE: Enable the RTE in Opera 9.62+
	* Added feature #10196: htmlArea RTE: Remove extension configuration variable enableClickEnlarge
	* Fixed bug #10197: htmlArea RTE: Missing XCLASS inclusion in class.tx_rtehtmlarea_pi1.php
	* Follow-up to #10181: htmlArea RTE: Move status bar to plugin
	* Fixed bug #9935: htmlArea RTE: enableWordClean on paste does not work when hidden button is not in toolbar
	* Updated htmlArea RTE version to 1.8.1 for TYPO3 4.3.0 alpha2

2009-01-18  Francois Suter  <francois@typo3.org>

	* Cleanup #10125: Replace deprecated function calls in sysext indexed_search (thanks to Markus Krause)

2009-01-16  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #10094: Fixed typing error in t3lib_TCEmain::dbAnalysisStoreExec()

2009-01-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10167: Backend not usable in Internet Explorer anymore
	* Fixed bug #9307: Remove an obsolete check for disable_exec_function in filelist
	* Fixed bug #10157: t3lib/config_default.php textfile_ext should be updated to include xml and other text types
	* Fixed bug #9867: Adding T3_SERVICES to configuration modul
